# servr-backend-prealpha

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt
main/: database.py  main.py
main/auth/: .env  methods.py  models.py
main/database/: database.py
main/files/: methods.py  models.py
rust_worker/: Cargo.toml
rust_worker/src/: main.rs
tests/: testauth.py  testfiles.py
